results/SVCOMP/conversational/log-ExDarko-2024_03_10_15_17_54.txt
class MyInteger {
  int value;

  //@ ensures \result <==> obj == this;
  //@ ensures !\result <==> obj != this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
                                                           ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
                                                                                     ^
2 errors

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures !\result <==> obj != this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:16:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures !\result <==> obj != this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:16:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures !\result <==> obj != this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:16:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:15: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:15:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:15: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:15:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:15: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:15:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:15: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:15:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:15: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:15:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

class MyInteger {
  /*@ spec_public @*/ int value;

  //@ ensures \result <==> obj == this;
  //@ ensures \result <==> obj instanceof MyInteger && this.value == ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:15: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExDarko.java:4:) in method equals
    return this.value == other.value;
    ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExDarko.java:15:
  //@ ensures \result <==> obj == this;
      ^
2 verification failures

